--- a/f4f_model.html
+++ b/f4f_model.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interaktivní AR s modelem</title>
+  <title>Interaktivní AR s modelem by F4F</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer"></script>
   <style>
     body {
