--- a/f4f_model.html
+++ b/f4f_model.html
@@ -38,12 +38,6 @@
       padding: 20px;
       color: #555;
     }
-    #error-message {
-      text-align: center;
-      font-size: 18px;
-      padding: 20px;
-      color: red;
-    }
     #license-info {
       position: fixed;
       bottom: 5px;
@@ -52,6 +46,16 @@
       font-size: 12px;
       color: #555;
       text-align: center;
+    }
+    #frame4future {
+      position: fixed;
+      bottom: 25px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 10px;
+      color: #333;
+      text-align: center;
+      font-family: Arial, sans-serif;
     }
   </style>
 </head>
@@ -76,19 +80,21 @@
   interaction-prompt-style="wiggle"
   camera-target="auto"></model-viewer>
 
+<!-- Tlačítko pro aktivaci AR -->
 <button id="ar-button" style="display: none;">Zobrazit ve vašem prostoru</button>
 
-<div id="error-message" style="display: none;">AR není dostupná na vašem zařízení.</div>
-
+<!-- Informace o licencích -->
 <div id="license-info">
   Používá <a href="https://github.com/google/model-viewer" target="_blank">Model Viewer</a> (Apache 2.0) a <a href="https://threejs.org/" target="_blank">three.js</a> (MIT).
 </div>
+
+<!-- Malý text "frame4future" ve spodní části -->
+<div id="frame4future">frame4future</div>
 
 <script>
   const modelViewer = document.querySelector('#model');
   const arButton = document.querySelector('#ar-button');
   const loadingMessage = document.querySelector('#loading-message');
-  const errorMessage = document.querySelector('#error-message');
 
   modelViewer.addEventListener('ar-status', (event) => {
     if (event.detail.status === 'session-started') {
@@ -102,8 +108,6 @@
     loadingMessage.style.display = 'none';
     if (modelViewer.canActivateAR) {
       arButton.style.display = 'block';
-    } else {
-      errorMessage.style.display = 'block';
     }
   });
 
