--- a/f4f_model.html
+++ b/f4f_model.html
@@ -89,7 +89,7 @@
 </div>
 
 <!-- Malý text "frame4future" ve spodní části -->
-<div id="frame4future">frame4future</div>
+<div id="frame4future">www.frame4future.com</div>
 
 <script>
   const modelViewer = document.querySelector('#model');
