--- a/f4f_model_test.html
+++ b/f4f_model_test.html
@@ -8,37 +8,40 @@
   <style>
     body {
       margin: 0;
-      background-color: #E5E5E5;
       font-family: Arial, sans-serif;
+      background-color: #f4f4f9;
+      color: #333;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
+      overflow-x: hidden;
     }
 
-    header {
-      background-color: #007BFF;
-      color: white;
-      padding: 10px 0;
-      width: 100%;
-      text-align: center;
-      font-size: 24px;
+    #header {
+      font-size: 26px;
       font-weight: bold;
+      text-align: center;
+      margin-top: 20px;
+      color: #333;
     }
 
     #description {
       text-align: center;
-      padding: 10px;
-      color: #333;
+      font-size: 16px;
+      color: #555;
+      margin-top: 5px;
+      margin-bottom: 20px;
+      max-width: 90%;
     }
 
     model-viewer {
-      width: 100%;
+      width: 90%;
+      max-width: 500px;
       height: 60vh;
-      margin: 20px 0;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      border-radius: 10px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     }
 
     #ar-button {
@@ -55,20 +58,33 @@
       outline: none;
       border-radius: 8px;
       cursor: pointer;
-      transition: background-color 0.3s ease, transform 0.2s;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      animation: pulse 1.5s infinite;
+      transition: transform 0.2s;
     }
 
     #ar-button:hover {
-      background-color: #0056B3;
       transform: scale(1.05);
     }
 
+    @keyframes pulse {
+      0% {
+        box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
+      }
+      50% {
+        box-shadow: 0 0 20px rgba(0, 123, 255, 1);
+      }
+      100% {
+        box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
+      }
+    }
+
     #loading-message {
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      text-align: center;
       font-size: 18px;
+      padding: 10px;
       color: #555;
+      margin-top: 20px;
     }
 
     #loading-icon {
@@ -88,22 +104,17 @@
     }
 
     #license-info {
-      position: fixed;
-      bottom: 10px;
-      left: 50%;
-      transform: translateX(-50%);
       font-size: 12px;
-      color: #555;
+      color: #777;
       text-align: center;
+      margin-top: 20px;
     }
 
     #frame4future {
-      position: fixed;
-      bottom: 40px;
-      left: 50%;
-      transform: translateX(-50%);
       font-size: 10px;
       color: #333;
+      text-align: center;
+      margin-top: 20px;
     }
 
     #frame4future a {
@@ -119,7 +130,7 @@
 </head>
 <body>
 
-<header>Interaktivní AR s modelem</header>
+<div id="header">Interaktivní AR s modelem</div>
 
 <div id="description">Prohlédněte si interaktivní model ve vašem prostoru pomocí rozšířené reality (AR).</div>
 
