--- a/f4f_model_test.html
+++ b/f4f_model_test.html
@@ -9,22 +9,30 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #f4f4f9;
-      color: #333;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
-      overflow-x: hidden;
-      transition: background-color 0.5s;
+      transition: background-color 0.5s, color 0.5s;
+      background-color: #f4f4f9;
+      color: #333;
+    }
+
+    .glass {
+      backdrop-filter: blur(10px) saturate(150%);
+      -webkit-backdrop-filter: blur(10px) saturate(150%);
+      background-color: rgba(255, 255, 255, 0.3);
+      border-radius: 10px;
+      padding: 20px;
+      margin: 10px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
 
     #header {
       font-size: 26px;
       font-weight: bold;
       text-align: center;
-      margin-top: 20px;
       color: #333;
     }
 
@@ -32,7 +40,6 @@
       text-align: center;
       font-size: 16px;
       color: #555;
-      margin-top: 5px;
       margin-bottom: 20px;
       max-width: 90%;
     }
@@ -46,53 +53,43 @@
     }
 
     #ar-button {
-      position: fixed;
-      bottom: 80px;
-      left: 50%;
-      transform: translateX(-50%);
       padding: 15px 30px;
       font-size: 18px;
       font-weight: bold;
-      background: #007BFF;
+      background: linear-gradient(135deg, #007BFF, #0056B3);
       color: white;
       border: none;
-      outline: none;
-      border-radius: 8px;
+      border-radius: 30px;
       cursor: pointer;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-      animation: pulse 1.5s infinite;
+      animation: glow 2s infinite;
       transition: transform 0.2s;
+      margin-top: 20px;
     }
 
-    #ar-button:hover {
-      transform: scale(1.05);
-    }
-
-    @keyframes pulse {
-      0% {
-        box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
-      }
-      50% {
-        box-shadow: 0 0 20px rgba(0, 123, 255, 1);
-      }
-      100% {
-        box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
-      }
+    @keyframes glow {
+      0% { box-shadow: 0 0 5px #007BFF; }
+      50% { box-shadow: 0 0 20px #007BFF; }
+      100% { box-shadow: 0 0 5px #007BFF; }
     }
 
     #dark-mode-toggle {
       position: fixed;
       top: 15px;
       right: 15px;
-      background: #333;
+      background: rgba(0, 0, 0, 0.5);
       color: white;
-      padding: 5px 10px;
-      border-radius: 5px;
+      padding: 8px 12px;
+      border-radius: 50%;
       cursor: pointer;
+      font-size: 20px;
+      transition: background-color 0.5s;
     }
 
     #loading-message {
-      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       font-size: 18px;
       padding: 10px;
       color: #555;
@@ -142,12 +139,11 @@
 </head>
 <body>
 
-<div id="header">Interaktivní AR s modelem</div>
+<div class="glass" id="header">Interaktivní AR s modelem</div>
 
-<div id="description">Prohlédněte si interaktivní model ve vašem prostoru pomocí rozšířené reality (AR).</div>
+<div class="glass" id="description">Prohlédněte si interaktivní model ve vašem prostoru pomocí rozšířené reality (AR).</div>
 
-<!-- Tlačítko pro přepínání světlého/tmavého režimu -->
-<div id="dark-mode-toggle" onclick="toggleDarkMode()">🌙 Dark Mode</div>
+<div id="dark-mode-toggle" onclick="toggleDarkMode()">🌙</div>
 
 <!-- Zpráva o načítání modelu s animovaným indikátorem -->
 <div id="loading-message">
@@ -171,15 +167,12 @@
   interaction-prompt-style="wiggle"
   camera-target="auto"></model-viewer>
 
-<!-- Tlačítko pro aktivaci AR -->
 <button id="ar-button" style="display: none;">Zobrazit ve vašem prostoru</button>
 
-<!-- Informace o licencích -->
 <div id="license-info">
   Používá <a href="https://github.com/google/model-viewer" target="_blank">Model Viewer</a> (Apache 2.0) a <a href="https://threejs.org/" target="_blank">three.js</a> (MIT).
 </div>
 
-<!-- Klikatelný odkaz "frame4future" -->
 <div id="frame4future">
   <a href="https://www.frame4future.com" target="_blank">www.frame4future.com</a>
 </div>
@@ -188,13 +181,15 @@
   const modelViewer = document.querySelector('#model');
   const arButton = document.querySelector('#ar-button');
   const loadingMessage = document.querySelector('#loading-message');
+  const darkModeToggle = document.getElementById('dark-mode-toggle');
 
   function toggleDarkMode() {
     document.body.classList.toggle('dark-mode');
     const isDark = document.body.classList.contains('dark-mode');
-    document.getElementById('dark-mode-toggle').textContent = isDark ? '☀️ Light Mode' : '🌙 Dark Mode';
-    document.body.style.backgroundColor = isDark ? '#333' : '#f4f4f9';
+    darkModeToggle.textContent = isDark ? '☀️' : '🌙';
+    document.body.style.backgroundColor = isDark ? '#222' : '#f4f4f9';
     document.body.style.color = isDark ? '#f4f4f9' : '#333';
+    darkModeToggle.style.backgroundColor = isDark ? '#555' : 'rgba(0, 0, 0, 0.5)';
   }
 
   modelViewer.addEventListener('ar-status', (event) => {
