--- a/f4f_model_test.html
+++ b/f4f_model_test.html
@@ -42,17 +42,27 @@
       color: #fff;
     }
 
-    model-viewer {
+    /* Kontejner pro model-viewer s efektem rozmazání pozadí */
+    .model-container {
+      position: relative;
       width: 100%;
       max-width: 600px;
       height: 70vh;
+      overflow: hidden;
       border-radius: 10px;
       box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
       transition: filter 0.5s;
     }
 
-    .blur-background {
+    .dark-mode .model-container {
       filter: blur(5px);
+    }
+
+    model-viewer {
+      width: 100%;
+      height: 100%;
+      border-radius: 10px;
+      filter: none; /* Ujistíme se, že model zůstane ostrý */
     }
 
     #ar-button {
@@ -147,22 +157,24 @@
   <span id="loading-icon"></span>Načítání modelu, prosím čekejte...
 </div>
 
-<model-viewer
-  id="model"
-  src="./us_prezident_pecet.glb"
-  ar ar-modes="webxr scene-viewer quick-look"
-  camera-controls
-  environment-image="neutral"
-  auto-rotate
-  scale="9 9 9"
-  xr-environment
-  camera-orbit="45deg 75deg 3m"
-  min-camera-orbit="auto 0deg 2m"
-  max-camera-orbit="auto 180deg 4m"
-  field-of-view="45deg"
-  interaction-prompt="auto"
-  interaction-prompt-style="wiggle"
-  camera-target="auto"></model-viewer>
+<div class="model-container">
+  <model-viewer
+    id="model"
+    src="./us_prezident_pecet.glb"
+    ar ar-modes="webxr scene-viewer quick-look"
+    camera-controls
+    environment-image="neutral"
+    auto-rotate
+    scale="9 9 9"
+    xr-environment
+    camera-orbit="45deg 75deg 3m"
+    min-camera-orbit="auto 0deg 2m"
+    max-camera-orbit="auto 180deg 4m"
+    field-of-view="45deg"
+    interaction-prompt="auto"
+    interaction-prompt-style="wiggle"
+    camera-target="auto"></model-viewer>
+</div>
 
 <button id="ar-button" style="display: none;">Zobrazit ve vašem prostoru</button>
 
@@ -183,7 +195,6 @@
     document.body.style.backgroundColor = isDark ? '#222' : '#f4f4f9';
     document.body.style.color = isDark ? '#f4f4f9' : '#333';
     darkModeToggle.style.backgroundColor = isDark ? '#555' : 'rgba(0, 0, 0, 0.5)';
-    modelViewer.classList.toggle('blur-background', isDark);
   }
 
   modelViewer.addEventListener('ar-status', (event) => {
